force-app/main/default/objects/Account_Owner_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is used to determine appropriate &quot;Mass Email&quot; or &quot;Catch All&quot; account for a given Account/Opportunity Owner. Name field contains &quot;Owner Name&quot; and Account Id field contains Id of associated account.. This setting is used in Opportunity trigger.</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <inlineHelpText>Id of the corresponding &quot;Mass Email &quot; OR &quot;Catch All&quot; Account.</inlineHelpText>
        <label>Account Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Student_Academic_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls the creation of student academic files for new students so that schools can migrate to School Kompanion for the academic aspect of school life</description>
        <label>Create Student Academic Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Short_Name__c</fullName>
        <description>short name for school. used in accounting processes.</description>
        <inlineHelpText>short name for school. used in accounting processes.</inlineHelpText>
        <label>School Short Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Owner Mapping</label>
    <listViews>
        <fullName>All_Settings</fullName>
        <columns>NAME</columns>
        <columns>School_Name__c</columns>
        <columns>School_Short_Name__c</columns>
        <columns>Account_Id__c</columns>
        <columns>Create_Student_Academic_Files__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Settings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mappings</fullName>
        <columns>NAME</columns>
        <columns>School_Name__c</columns>
        <columns>School_Short_Name__c</columns>
        <columns>Account_Id__c</columns>
        <columns>Create_Student_Academic_Files__c</columns>
        <filterScope>Everything</filterScope>
        <label>Mappings</label>
        <language>en_US</language>
    </listViews>
</CustomObject>